Removed xercesImpl, created new windows port